# yatgbotlib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.d7abc52  Makefile  README.md  SequenceDispatcher.h  apimanager.h  appveyor.yml  appveyour.yml  cert.pem  cmake_install.cmake  conan_imports_manifest.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conanfile.txt  conaninfo.txt  curl.cbp  doxyconfig  fsm.h  generate.py  graph_info.json  httplib.h  index.html  install_manifest.txt  json_parser.h  key.pem  license.txt  main.cpp  networkmanager.h  querybuilder.h  sequence_dispatcher.h  telegramStructs.h  telegram_bot.h  telegram_methods.h  telegram_structs.h  tglib  threadsafe_queue.h  (+7 more)
cmake/: TGlibConfig-release.cmake  TGlibConfig.cmake
examples/: CMakeLists.txt  callback_example.cpp  callback_example.cpp.autosave  dbexample.cpp  echo_bot.cpp  regex_example.cpp  register_bot.cpp  sequence_example.cpp  sequence_example.cpp.autosave  webhook_example.cpp
include/: __telegram_bot.h  telegram_bot.h  telegram_bot.h.autosave  telegram_structs.h
include/openssl/: opensslconf.h
src/: CMakeLists.txt
src/headers/: __telegram_structs.h  apimanager.h  apimanager.h.autosave  json_parser.h  json_parser.h.autosave  networkmanager.h  querybuilder.h  sequence_dispatcher.h  sequence_dispatcher.h.autosave  telegram_structs.h  telegram_structs.h.autosave  traits.h  traits.h.autosave  update_manager.cpp  update_manager.h  update_manager.h.autosave
src/sources/: __telegram_bot.cpp  main.cpp  networkmanager.cpp  querybuilder.cpp  sequence_dispatcher.cpp  telegram_bot.cpp  telegram_bot.cpp.autosave  telegram_structs.cpp  telegrambot.cpp  update_manager.cpp
src/utility/: logger.h  logger.h.autosave  threadpool.h  traits.h  trie.h  utility.h
test/: CMakeLists.txt  api_manager_tests.cpp  bot_tests.cpp  json_parser_tests.cpp  json_parser_tests.cpp.autosave  network_manager_tests.cpp  query_builder_tests.cpp  sequence_dispatcher_tests.cpp
